fixed logic behind displayOutcome

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-image: url("./images/background.png");
+  
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -120,6 +121,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#endpage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh
 }
 
 button {
